--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hey there!</title>
     <link rel="stylesheet" href="index.css"><link>
+
+    <script src="index.js" defer></script>
     <!-- <style>
         h1{
             color: red;
@@ -153,14 +155,14 @@
         <br>
         <label for="Pass">batch</label>
         <input type = "checkbox" name = "Pass" id= "pass" value = "B.Tech"><br>
-        <input type = "radio" name = "myrange" id = ""><br>
-        <input type = "range" name = "" id = ""><br>
-        <input type = "password" name = "" id = ""><br>
+        <input type = "radio" ><br>
+        <input type = "range" ><br>
+        <input type = "password" ><br>
         <button type = "submit">Submit</button>
     </form>
     
-    
-    <a href="form2.html" target="_blank"> 
+
+    <a href="form2.html" target="_blank" class = "Division1"> 
         <button type = "button" style="border-radius: 150px black">Form No 2</button>
     </a>
 
