--- a/index.html
+++ b/index.html
@@ -174,6 +174,43 @@
     </form>
     <br>
     <br>
+
+    <form>
+        <p>Enter some value below:</p>
+        <input type="color" name="color" style="width: 100px;">
+        <br>
+        <br>
+
+        <label>
+            Enter some value below:
+            <input type="color" name="color" style="width: 100px;" required>
+        </label>
+        <br>
+        <br>
+
+        <label for="opt1">This is for option 1:</label>
+        <input type="radio" name="opts" id="opt1">
+        <br>
+
+        <label for="opt2">This is for option 2:</label>
+        <input type="radio" name="opts" id="opt2">
+        <br>
+
+        <p>Select from the dropdown menu now</p>
+        <select name="Options">
+            <option value = "Opt1">Option 1</option>
+            <option value = "Opt2">Option 2</option>
+            <option value = "Opt3">Option 3</option>
+            <option value = "Opt4">Option 4</option>
+        </select>
+
+        <!-- <p>Text Area</p>
+        <textarea name="ta1"></textarea>
+        <br> -->
+
+        <p>Bigger Text Area</p>
+        <textarea name="ta2" rows="5" cols="50"></textarea>
+    </form>
     
 
     <!-- <a href="form2.html" target="_blank"> 
