--- a/trial3.html
+++ b/trial3.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Trial 3 for JS</title>
+    <!-- <script src="trial3.js"></script> -->
 </head>
 <body>
-    <p>Testing again</p>
+    <H1>This is the Weight Converter</H1>
+    <script src="trial3.js"></script>
 </body>
 </html>
